# rusttemplate

./: .env  Cargo.toml
test-project/src/: main.rs  whatsapp.rs
test-project/src/whatsapp_models/: component.rs  image_response.rs  message.rs  message_response.rs  mod.rs  payload_template.rs  read_response.rs  token.rs  whatsapp_client.rs  whatsapp_error.rs
